--- a/src/main/resources/templates/thyme/common/Navibar.html
+++ b/src/main/resources/templates/thyme/common/Navibar.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Lets go</title>
+    <meta charset="UTF-8">
+    <title>Navibar</title>
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
+    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"
+            integrity="sha384-J45YjpmdfF5LN0X8c6HfECb8FMrYHENmy2x+Q8ojWnAwbkXg2e5j48HlhvgSAFcT"
+            crossorigin="anonymous"></script>
 </head>
-<style>
-    @font-face {
-        font-family: 'Pretendard-Regular';
-        src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-    }
-    * {
-        font-family: 'Pretendard-Regular', 'sans-serif';
-    }
-</style>
 <body>
-<nav class="navbar navbar-expand-lg" style="background-color: #93BFCF">
-    <div class="container px-4 px-lg-5">
-         <a class="navbar-brand" th:href="@{/letsGo}">Lets go</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-                class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">마이페이지</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">수영장 정보</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/record/view}">기록</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/challenge/all}">챌린지</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="/market/list" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">마켓</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/market/list}">All Products</a></li>
-                        <li>
-                            <hr class="dropdown-divider"/>
+    <div th:fragment="body">
+        <nav class="navbar navbar-expand-lg" style="background-color: #93BFCF">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" th:href="@{/letsGo}">Lets go</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">마이페이지</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">수영장 정보</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/record/view}">기록</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/challenge/all}">챌린지</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" th:href="@{/market/list}" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">마켓</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" th:href="@{/market/list}">All Products</a></li>
+                                <li><hr class="dropdown-divider"/></li>
+                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                            </ul>
                         </li>
-                        <li><a class="dropdown-item" href="#!">Popular Items</a></li>
                     </ul>
-                </li>
-            </ul>
-        </div>
+                </div>
+            </div>
+        </nav>
     </div>
-</nav>
 </body>
 </html>
