--- a/src/main/resources/templates/thyme/market/Market.html
+++ b/src/main/resources/templates/thyme/market/Market.html
@@ -6,9 +6,13 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Let's Go Market</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css}"
+          rel="stylesheet"/>
+    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js}"></script>
     <style>
         .card-img-top {
             width: auto;
@@ -25,10 +29,10 @@
     </style>
 </head>
 <body>
-    <div th:replace="~{common/Navibar :: body}"></div>
+    <div th:replace="common/Navibar :: body"></div>
 
     <!-- 장바구니 -->
-    <form class="cart" action="/market/cart">
+    <form class="cart" th:action="@{/market/cart}">
         <button class="cart-detail btn btn-outline-dark bg-white" type="submit">
             <i class="bi-cart-fill me-1"></i>
             장바구니
@@ -53,17 +57,19 @@
                 <div class="col mb-5" th:each="product : ${productList}">
                     <div class="card h-100">
                         <!-- Product image -->
-                        <img class="card-img-top" th:src="${product.productImg}" alt="no image"/>
+                        <img class="card-img-top" th:src="@{${product.productImg}}" alt="..."/>
                         <!-- Product details -->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name -->
                                 <h5 class="fw-bolder" th:text="${product.productName}">Product Name</h5>
                                 <!-- Product price -->
-                                <span th:text="${product.productSellprice}">Product Price</span>
+                                <span th:text="${product.productSellPrice}">Product Price</span>
                             </div>
                         </div>
-                        <!-- Product actions -->
+                    </div>
+                </div>
+                <!-- Product actions -->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" th:href="@{/market/detail(id=${product.id})}">상세 페이지</a></div>
                         </div>
@@ -72,6 +78,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Footer -->
     <footer class="py-5" style="background-color: #BDCDD6">
