--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -71,7 +71,8 @@
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center">
 <!--                                <a class="btn btn-outline-dark mt-auto"-->
-<!--                                   th:href="@{/market/detail/{id}(id=${product.id})}">상세 페이지</a>-->
+<!--                                   th:href="@{/market/detail(productId=${product.id})}">상세 페이지</a>-->
+                                <a class="btn btn-outline-dark mt-auto">상세 페이지</a>
                             </div>
                         </div>
                     </div>
