--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -14,6 +14,17 @@
           rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        * {
+            font-family: 'Pretendard-Regular', 'sans-serif';
+        }
+
         .card-img-top {
             width: auto;
             height: 200px;
