[FEAT] 마켓 메뉴바 구현

--- a/src/main/resources/templates/common/Navibar.html
+++ b/src/main/resources/templates/common/Navibar.html
@@ -16,7 +16,7 @@
     }
 </style>
 <body>
-<nav class="navbar navbar-expand-lg" style="background-color: #93BFCF">
+<nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
     <div class="container px-4 px-lg-5">
          <a class="navbar-brand" th:href="@{/letsGo}">Lets go</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
