--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -13,17 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
           rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/marketMenu.css">
     <style>
-        @font-face {
-            font-family: 'Pretendard-Regular';
-            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        * {
-            font-family: 'Pretendard-Regular', 'sans-serif';
-        }
 
         .card-img-top {
             width: auto;
@@ -40,7 +31,8 @@
     </style>
 </head>
 <body>
-    <div th:replace="common/Navibar :: body"></div>
+    <!-- 상단 내비바 -->
+    <div th:replace="~{common/Navibar :: body}"></div>
 
     <!-- 장바구니 -->
     <form class="cart" th:action="@{/market/cart}">
@@ -51,8 +43,11 @@
         </button>
     </form>
 
+    <!-- 우측 메뉴바 -->
+    <div class="market-menu" th:include="~{/market/MarketMenubar :: body}"></div>
+
     <!-- Header -->
-    <header class="py-5" style="background-color: #BDCDD6">
+    <header class="py-5" style="background-color: #0E46A3">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
                 <h1 class="display-4 fw-bolder">Let's Go Market</h1>
@@ -93,7 +88,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-5" style="background-color: #BDCDD6">
+    <footer class="py-5" style="background-color: #0E46A3">
         <div class="container"><p class="m-0 text-center text-white">Software System &copy; 240105 marin-girls</p></div>
     </footer>
 </body>
