[FEAT] 마켓 상세페이지 조회 API 구현

--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -17,7 +17,7 @@
     <header class="py-5" style="background-color: #0E46A3">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Let's Go Market</h1>
+                <h1 class="display-4 fw-bolder">Let's Go Cart</h1>
                 <p class="lead fw-normal text-white-50 mb-0">수영 물품 중고 마켓</p>
             </div>
         </div>
@@ -36,7 +36,6 @@
             <table class="calculation1">
                 <tr>
                     <th class="aa">구매 상품</th>
-                    <!-- <th class="aa">해외 상품</th> -->
                     <th style="width: 700px;"></th>
                 </tr>
             </table>
