--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -72,15 +72,13 @@
                                 <!-- Product name -->
                                 <h5 class="fw-bolder" th:text="${product.productName}">Product Name</h5>
                                 <!-- Product price -->
-                                <span th:text="${product.productSellPrice}">Product Price</span>
+                                <span th:text="${product.productSellPrice}">원</span>
                             </div>
                         </div>
                         <!-- Product actions -->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center">
-<!--                                <a class="btn btn-outline-dark mt-auto"-->
-<!--                                   th:href="@{/market/detail(productId=${product.id})}">상세 페이지</a>-->
-                                <a class="btn btn-outline-dark mt-auto">상세 페이지</a>
+                                <a class="btn btn-outline-dark mt-auto" th:href="@{/market/detail(productId=${product.productId}, productType=${product.productType})}">상세 페이지</a>
                             </div>
                         </div>
                     </div>
