--- a/src/main/resources/templates/signin/signin.html
+++ b/src/main/resources/templates/signin/signin.html
@@ -48,10 +48,10 @@
 </head>
 <body>
 <section class="login-form">
-    <h1>DIA-LOG</h1>
-    <form th:action="@{/login}" method="post">
+    <h1>LETSGO</h1>
+    <form th:action="@{/signin}" method="post">
         <div class="input">
-            <input type="text" name="ID" id="ID" required> <label for="ID">ID</label>
+            <input type="text" name="id" id="id" required> <label for="id">ID</label>
         </div>
         <div class="input">
             <input type="password" name="password" id="password" required> <label for="password">PASSWORD</label>
