--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -10,11 +10,11 @@
     font-family: 'Pretendard-Regular', 'sans-serif';
 }
 body {
-    font-size: 13pt;
     width: 100%;
 }
 
 #frame {
+    font-size: 13pt;
     width: 80%;
     margin: 0 auto;
     background-color: #fff;
@@ -37,6 +37,7 @@ table.calculation1 {
     background-color: #f5f5f0;
     width: 100%;
     font-size: 10pt;
+    text-align: center;
 }
 
 table.calculation2 {
