--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -24,7 +24,7 @@
     </header>
 
     <div id="frame">
-    <form>
+        <form>
         <div id="frame2">
             <span style="font-size: 16pt; font-weight: bold;">장바구니</span>
             <span class="home">홈 > 장바구니</span>
@@ -35,8 +35,8 @@
         <div>
             <table class="calculation1">
                 <tr>
-                    <th class="aa">구매 상품</th>
-                    <th style="width: 700px;"></th>
+                    <th class="aa" style="padding-left: 10px">구매 상품</th>
+                    <th style="width: 80%;"></th>
                 </tr>
             </table>
         </div>
@@ -44,32 +44,38 @@
 
         <!-- 상품 정보 테이블 -->
         <div>
-            <table class="calcultation1">
+            <table class="calculation1">
                 <thead>
                     <tr>
                         <th colspan="10" style="text-align: left; padding-left: 10px;">
-                            일반 상품(1)
+                            일반 상품 (1)
                         </th>
                     </tr>
                     <tr>
-                        <th><input type="checkbox" name="checkbox" id="check" /></th>
-                        <th><span>이미지</span></th>
-                        <th style="width: 550px;"><span>상품 정보</span></th>
-                        <th>판매가</th>
-                        <th>수량</th>
-                        <th>적립금</th>
-                        <th>배송 구분</th>
-                        <th>배송비</th>
-                        <th>합계</th>
-                        <th>선택</th>
+                        <th style="width: 5%;">
+                            <label for="check">
+                                <input type="checkbox" name="checkbox" id="check" />
+                            </label>
+                        </th>
+                        <th style="width: 10%;"><span>이미지</span></th>
+                        <th style="width: 40%;"><span>상품 정보</span></th>
+                        <th style="width: 10%;">판매가</th>
+                        <th style="width: 10%;">수량</th>
+                        <th style="width: 5%;">적립금</th>
+                        <th style="width: 10%;">배송 구분</th>
+                        <th style="width: 10%;">배송비</th>
+                        <th style="width: 10%;">합계</th>
+                        <th style="width: 10%;">선택</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr style="height: 90px; background-color: #fff;">
                         <td style="text-align: center; border-right: none;">
-                            <input type="checkbox" name="checkbox" />
+                            <label>
+                                <input type="checkbox" name="checkbox" />
+                            </label>
                         </td>
-                        <td style="border-left: none; border-right: none;"><img style="width: 80%" src="" th:src="@{/image-path}" /> </td>
+                        <td style="border-left: none; border-right: none;"><img style="width: 80%" src="" th:src="@{/image-path}"  alt="x"/> </td>
                         <td style="text-align: left; padding-left: 10px; border-left: none; font-weight: bold;">JOYMENT</td>
                         <td><span style="padding-left: 10px;">0</span>원</td>
                         <td style="width: 80px;">
@@ -78,7 +84,7 @@
                         </td>
                         <td>-</td>
                         <td>기본 배송</td>
-                        <td>2,500원<<br/>고정</td>
+                        <td>2,500원<br/>고정</td>
                         <td><span>0</span>원</td>
                         <td>
                             <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px; background-color: #e0e0eb">주문하기</button>
@@ -132,6 +138,6 @@
             <span class="clearboth"></span>
         </div>
     </form>
-</div>
+    </div>
 </body>
 </html>
