--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -106,7 +106,7 @@
 <body onload="populateYears(); populateDays()">
 <div class="wrap">
     <h1>회원가입</h1>
-    <form th:action="@{/register}" method="post">
+    <form th:action="@{/signup}" method="post">
         <dl>
             <dt>이름</dt>
             <dd><input type="text" name="name" placeholder="이름 입력" required></dd>
