--- a/src/main/resources/templates/common/Navibar.html
+++ b/src/main/resources/templates/common/Navibar.html
@@ -34,7 +34,7 @@
                         <li>
                             <hr class="dropdown-divider"/>
                         </li>
-                        <li><a class="dropdown-item" th:href="@{#!}">Popular Items</a></li>
+                        <li><a class="dropdown-item" th:href="@{}">Popular Items</a></li>
                     </ul>
                 </li>
             </ul>
