--- a/src/main/resources/templates/common/Navibar.html
+++ b/src/main/resources/templates/common/Navibar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Lets go</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,12 +18,13 @@
 <body>
 <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
     <div class="container px-4 px-lg-5">
-         <a class="navbar-brand" th:href="@{/letsGo}">Lets go</a>
+        <a class="navbar-brand" th:href="@{/letsGo}">Lets go</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{#!}">수영장 정보</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/record/view}">기록</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/challenge/all}">챌린지</a></li>
                 <li class="nav-item dropdown">
@@ -34,7 +35,7 @@
                         <li>
                             <hr class="dropdown-divider"/>
                         </li>
-                        <li><a class="dropdown-item" th:href="@{}">Popular Items</a></li>
+                        <li><a class="dropdown-item" th:href="@{#!}">Popular Items</a></li>
                     </ul>
                 </li>
             </ul>
