--- a/src/main/resources/templates/common/Navibar.html
+++ b/src/main/resources/templates/common/Navibar.html
@@ -40,9 +40,16 @@
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" th:href="@{/mypage/mypage}">마이페이지</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/signin/signin}">로그인</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/signup/signup}">회원가입</a></li>
+                <li class="nav-item" th:if="${session.user}">
+                    <a class="nav-link" th:href="@{/logout}">로그아웃</a>
+                </li>
+                <li class="nav-item" th:if="${session.user}"><a class="nav-link" th:href="@{/mypage/mypage}">마이페이지</a></li>
+                <li class="nav-item" th:unless="${session.user}">
+                    <a class="nav-link" th:href="@{/signin/signin}">로그인</a>
+                </li>
+                <li class="nav-item" th:unless="${session.user}">
+                    <a class="nav-link" th:href="@{/signup/signup}">회원가입</a>
+                </li>
             </ul>
         </div>
     </div>
