--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,3 @@
-<!--<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Lets go</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-          rel="stylesheet"/>
-    <script th:inline = "javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <style>
-        @font-face {
-            font-family: 'Pretendard-Regular';
-            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-            font-weight: 400;
-            font-style: normal;
-        }
-        * {
-            font-family: 'Pretendard-Regular', 'sans-serif';
-        }
-    </style>
-</head>
-<body>
-    <div th:replace="~{common/Navibar :: body}"></div>
-    <div th:replace="~{swimpool/Search}"></div>
-</body>
-</html>
--->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
@@ -49,6 +18,7 @@
     </style>
 </head>
 <body>
-<div th:replace="~{common/Navibar :: body}"></div>
+<!-- <div th:replace="~{common/Navibar :: body}"></div> -->
+<div th:insert="~{swimpool/Search}"></div>
 </body>
 </html>
