[MOD] index 에러 해결

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-<!-- <div th:replace="~{common/Navibar :: body}"></div> -->
-<div th:insert="~{swimpool/Search}"></div>
+    <div th:replace="~{common/Navibar :: body}"></div>
+<!--    <div th:insert="~{swimpool/Search :: body}"></div>-->
 </body>
 </html>
