--- a/src/main/resources/templates/common/Navibar.html
+++ b/src/main/resources/templates/common/Navibar.html
@@ -42,7 +42,8 @@
                 <li class="nav-item" th:if="${session.user}">
                     <a class="nav-link" th:href="@{/logout}">로그아웃</a>
                 </li>
-                <li class="nav-item" th:if="${session.user}"><a class="nav-link" th:href="@{/mypage/mypage}">마이페이지</a></li>
+                <li class="nav-item" th:if="${session.user}">
+                    <a class="nav-link" th:href="@{/mypage/mypage}">마이페이지</a></li>
                 <li class="nav-item" th:unless="${session.user}">
                     <a class="nav-link" th:href="@{/signin/signin}">로그인</a>
                 </li>
