--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -15,8 +15,8 @@
           rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/marketMenu.css">
+    <link rel="stylesheet" href="/css/search.css">
     <style>
-
         .card-img-top {
             width: auto;
             height: 200px;
@@ -54,7 +54,14 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
                 <h1 class="display-4 fw-bolder">Let's Go Market</h1>
-                <p class="lead fw-normal text-white-50 mb-0">수영 물품 중고 마켓</p>
+                <form th:action="@{/market/searchByName}" method="get" class="search">
+                    <div class="search">
+                        <label>
+                            <input type="text" name="keyword" placeholder="구매하고자 하는 상품을 검색하세요">
+                            <img type="submit" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png" alt="...">
+                        </label>
+                    </div>
+                </form>
             </div>
         </div>
     </header>
