[FEAT] market 판매자 매니저 페이지 이동 연결

--- a/src/main/resources/templates/market/MarketMenubar.html
+++ b/src/main/resources/templates/market/MarketMenubar.html
@@ -27,7 +27,7 @@
 <!--          </ul>-->
         </li>
         <li>
-          <a href="#">go to manager's page</a>
+          <a th:href="@{/market/manager}">go to manager's page</a>
         </li>
       </ul>
     </aside>
