--- a/src/main/resources/templates/salesManager/RegisterProductForm.html
+++ b/src/main/resources/templates/salesManager/RegisterProductForm.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>Title</title>
+    <meta charset="UTF-8">
+    <title>Lets go - manager </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+<style type="text/css">
+    @font-face {
+        font-family: 'Pretendard-Regular';
+        src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+        font-weight: 400;
+        font-style: normal;
+    }
+    * {
+        font-family: 'Pretendard-Regular', 'sans-serif';
+    }
+</style>
 <body>
+<div th:if="${session.user == null}">
+    <script>
+        alert("로그인 후 이용해주세요");
+        window.close();
+    </script>
+</div>
+<div th:if="${f != null}">
+    <script>
+        alert("상품 등록 실패");
+        // return false;
+    </script>
+</div>
+<form id="formsub" th:action="@{/market/manager/add}" method="post" enctype="multipart/form-data">
+        <table id="container" class="table table-bordered">
+            <tr>
+                <td id="result" colspan="2"></td>
+            </tr>
+            <tr>
+                <th><label for="productname">상품명</label></th>
+                <td><input type="text" name="productname" id="productname" placeholder="상품명 입력해주세요"></td>
+            </tr>
+            <tr>
+                <th><label for="productprice">가격</label></th>
+                <td><input type="text" name="productprice" id="productprice" placeholder="가격을 적어주세요"></td>
+            </tr>
+            <tr>
+                <th><label for="productcontents">상품 정보</label></th>
+                <td><textarea name="productcontents" id="productcontents" cols="50" rows="20"></textarea></td>
+            </tr>
+            <tr>
+                <th><label for="useremail">작성자</label></th>
+                <td><input type="text" name="useremail" id="useremail" th:value="${loginUserid}" readonly></td>
+            </tr>
+            <tr>
+                <th><label for="files"> 이미지 파일</label></th>
+                <td><input type="file" multiple name="files" id="files">
+                <div class="select_img"></div></td>
+            </tr>
+            <tr>
+                <th colspan="2">
+                    <input type="button" id="submitButn" value="등록하기">
+                </th>
+            </tr>
+        </table>
+    </form>
 
+    <script>
+    $(document).ready(function(){
+        $("#submitButn").on("click",function(){
+            var productname = $("#productname").val();
+            var productcontents = $("#productcontents").val();
+            var productprice = $("#productprice").val();
+            var useremail = $("#useremail").val();
+            var formData = new FormData();
+
+            if(productname === ""){
+                alert("상품명을 입력해주세요");
+                return false;
+            }
+            else if(productprice === ""){
+                alert("상품 가격을 입력해주세요");
+                return false;
+            }
+            else if(isNaN(productprice) === true){
+                alert("숫자만 입력해주세요");
+                return false;
+            }
+            else if(productcontents === ""){
+                alert("상품 내용을 입력해주세요");
+                return false;
+            }
+            else{
+                var inputFile = $("input[name='files']");
+                var files = inputFile[0].files;
+
+                for (var i = 0; i < files.length; i++) {
+                    formData.append("files",files[i]);
+                }
+                formData.append("productname",productname);
+                formData.append("productcontents",productcontents);
+                formData.append("productprice",productprice);
+                formData.append("useremail",useremail);
+                console.log(formData);
+                $.ajax({
+                    url: '/product/uploadFile',
+                    processData : false,
+                    contentType : false,
+                    data : formData,
+                    datatype : JSON,
+                    type : "POST",
+                    success : function(data){
+                        if(data === "f"){
+                            alert("파일 업로드 실패");
+                        }
+                        else{
+                            $("#formsub").submit();
+                        }
+                    }
+                });
+            }
+        });
+    });
+    </script>
 </body>
 </html>
