[FEAT] market JPA 적용 중...

--- a/src/main/resources/templates/salesManager/SalesManager.html
+++ b/src/main/resources/templates/salesManager/SalesManager.html
@@ -46,7 +46,7 @@
         <tr>
             <td width="149">
                 <a th:href="@{/market/manager}"><img
-                    src="https://ifh.cc/g/fQrmjz.png" alt="레쑤고 웰컴" width="65" height="65" border="0" style="margin-left: 10px; margin-top: 10px;"/>
+                    src="https://ifh.cc/g/fQrmjz.png" alt="레쑤고 웰컴" width="65" height="65" border="0" style="margin-left: 10px; margin-top: 10px;"/><h3>Lets go</h3>
                 </a>
             </td>
             <td>
@@ -62,7 +62,6 @@
         </tr>
     </table>
 </div>
-
 <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #0E46A3;">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
