--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -58,7 +58,7 @@
                             </label>
                         </th>
                         <th style="width: 10%;"><span>이미지</span></th>
-                        <th style="width: 40%;"><span>상품 정보</span></th>
+                        <th style="width: 35%;"><span>상품 정보</span></th>
                         <th style="width: 10%;">판매가</th>
                         <th style="width: 10%;">수량</th>
                         <th style="width: 5%;">적립금</th>
@@ -76,7 +76,7 @@
                             </label>
                         </td>
                         <td style="border-left: none; border-right: none;"><img style="width: 80%" src="" th:src="@{/image-path}"  alt="x"/> </td>
-                        <td style="text-align: left; padding-left: 10px; border-left: none; font-weight: bold;">JOYMENT</td>
+                        <td style="text-align: left; padding-left: 10px; border-left: none; font-weight: bold;">상품 이름</td>
                         <td><span style="padding-left: 10px;">0</span>원</td>
                         <td style="width: 80px;">
                             <input type="number" style="text-align: right; margin-bottom: 5px; width: 43px;">
