[FEAT] 유저별로 다른 장바구니 기능 구현

--- a/src/main/resources/templates/market/MarketMenubar.html
+++ b/src/main/resources/templates/market/MarketMenubar.html
@@ -17,14 +17,10 @@
       </section>
       <ul>
         <li>
-          <a th:href="@{/market/cart}"><i class="fa-solid fa-cat"></i>cart</a>
+          <a th:href="@{/cart/view}"><i class="fa-solid fa-cat"></i>cart</a>
         </li>
         <li>
           <a href="#">wish</a>
-<!--          <ul>-->
-<!--            <li><a href="#">text1</a></li>-->
-<!--            <li><a href="#">text2</a></li>-->
-<!--          </ul>-->
         </li>
         <li>
           <a th:href="@{/market/manager}">go to manager's page</a>
