--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/cart.css">
 </head>
-<style>
-
-</style>
 <body>
     <div th:replace="~{common/Navibar :: body}"></div>
 
@@ -23,121 +20,132 @@
         </div>
     </header>
 
-    <div id="frame">
+    <div th:if="${session != null}">
+        <div id="frame">
         <form>
-        <div id="frame2">
-            <span style="font-size: 16pt; font-weight: bold;">장바구니</span>
-            <span class="home">홈 > 장바구니</span>
-            <span></span>
-        </div>
-        <br/>
+            <div id="frame2">
+                <span style="font-size: 16pt; font-weight: bold;">장바구니</span>
+                <span class="home">홈 > 장바구니</span>
+                <span></span>
+            </div>
+            <br/>
 
-        <div>
-            <table class="calculation1">
+            <div>
+                <table class="calculation1">
+                    <tr>
+                        <th class="aa" style="padding-left: 10px">구매 상품</th>
+                        <th style="width: 80%;"></th>
+                    </tr>
+                </table>
+            </div>
+            <br/>
+
+            <!-- 상품 정보 테이블 -->
+            <div>
+                <table class="calculation1">
+                    <thead>
+                        <tr>
+                            <th colspan="10" style="text-align: left; padding-left: 10px;">
+                                일반 상품 (<span th:text="${#lists.size(cartList)}"></span>)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th style="width: 5%;">
+                                <label for="check">
+                                    <input type="checkbox" name="checkbox" id="check" />
+                                </label>
+                            </th>
+                            <th style="width: 10%;"><span>이미지</span></th>
+                            <th style="width: 35%;"><span>상품 정보</span></th>
+                            <th style="width: 10%;">판매가</th>
+                            <th style="width: 10%;">수량</th>
+                            <th style="width: 5%;">적립금</th>
+                            <th style="width: 10%;">배송 구분</th>
+                            <th style="width: 10%;">배송비</th>
+                            <th style="width: 10%;">합계</th>
+                            <th style="width: 10%;">선택</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="cartItem : ${cartList}" style="height: 90px; background-color: #fff;">
+                            <td style="text-align: center; border-right: none;">
+                                <label>
+                                    <input type="checkbox" name="checkbox" />
+                                </label>
+                            </td>
+                            <td style="border-left: none; border-right: none;">
+                                <img th:src="@{${cartItem.product.productImg}}" style="width: 80%" alt="Product Image"/>
+                            </td>
+                            <td style="text-align: left; padding-left: 10px; border-left: none; font-weight: bold;">
+                                <span th:text="${cartItem.product.productName}">상품 이름</span>
+                            </td>
+                            <td><span th:text="${cartItem.product.productSellPrice}">0</span>원</td>
+                            <td style="width: 80px;">
+                                <input type="number" th:value="${cartItem.amount}" style="text-align: right; margin-bottom: 5px; width: 43px;">
+                                <button class="btn default" style="border-radius: 3px; size: 10px;">변경</button>
+                            </td>
+                            <td>-</td>
+                            <td>기본 배송</td>
+                            <td>2,500원<br/>고정</td>
+                            <td><span th:text="${cartItem.product.productSellPrice * cartItem.amount}">0</span>원</td>
+                            <td>
+                                <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px; background-color: #e0e0eb">주문하기</button>
+                                <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">관심 상품 등록</button>
+                                <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">X 삭제</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr style="height: 60px;">
+                            <td colspan="5" style="border-right: none; text-align: left; padding-left: 10px;"><span>[기본배송]</span></td>
+                            <td colspan="5" style="border-left: none; text-align: right; padding-right: 10px;">
+                                상품 금액 <span th:text="${totalProductPrice}">0</span> + <span>배송비 2,500 = 합계</span>&nbsp;
+                                <span style="font-weight: bold; font-size: 15pt;" th:text="${totalProductPrice + 2500}">0</span>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+                <div style="border: solid 1px #e0e0eb; padding: 15px 0;" >
+                    <img src="" style="margin-left: 5px; position: relative; top: 4.5px;" th:src="@{/image-path}" />
+                    <span style="font-size: 10pt; color:gray;">할인 적용 금액은 주문서 작성의 결제 예정 금액에서 확인 가능합니다.</span>
+                </div>
+            </div>
+            <div style="margin: 10px 0;">
+                <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
+                <button class="btn default btnfloat" style="background-color: gray; color: #fff">X 삭제하기</button>&nbsp;
+                <button class="btn default btnfloat2">장바구니 비우기</button>
+                <span class="clearboth"></span>
+            </div>
+            <br/><br/>
+
+            <table class="calculation2">
                 <tr>
-                    <th class="aa" style="padding-left: 10px">구매 상품</th>
-                    <th style="width: 80%;"></th>
+                    <th>총 상품금액</th>
+                    <th>총 배송비</th>
+                    <th style="width: 750px; padding: 22px 0;"><span>결제 예정 금액</span></th>
+                </tr>
+                <tr style="background-color: #fff;">
+                    <td style="padding: 22px 0"><span class="price" th:text="${totalProductPrice}">0</span>원</td>
+                    <td>+<span class="price">2500</span>원</td>
+                    <td>=<span class="price" th:text="${totalProductPrice + 2500}">0</span>원</td>
                 </tr>
             </table>
-        </div>
-        <br/>
+            <br/><br/>
 
-        <!-- 상품 정보 테이블 -->
-        <div>
-            <table class="calculation1">
-                <thead>
-                    <tr>
-                        <th colspan="10" style="text-align: left; padding-left: 10px;">
-                            일반 상품 (1)
-                        </th>
-                    </tr>
-                    <tr>
-                        <th style="width: 5%;">
-                            <label for="check">
-                                <input type="checkbox" name="checkbox" id="check" />
-                            </label>
-                        </th>
-                        <th style="width: 10%;"><span>이미지</span></th>
-                        <th style="width: 35%;"><span>상품 정보</span></th>
-                        <th style="width: 10%;">판매가</th>
-                        <th style="width: 10%;">수량</th>
-                        <th style="width: 5%;">적립금</th>
-                        <th style="width: 10%;">배송 구분</th>
-                        <th style="width: 10%;">배송비</th>
-                        <th style="width: 10%;">합계</th>
-                        <th style="width: 10%;">선택</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="height: 90px; background-color: #fff;">
-                        <td style="text-align: center; border-right: none;">
-                            <label>
-                                <input type="checkbox" name="checkbox" />
-                            </label>
-                        </td>
-                        <td style="border-left: none; border-right: none;"><img style="width: 80%" src="" th:src="@{/image-path}"  alt="x"/> </td>
-                        <td style="text-align: left; padding-left: 10px; border-left: none; font-weight: bold;">상품 이름</td>
-                        <td><span style="padding-left: 10px;">0</span>원</td>
-                        <td style="width: 80px;">
-                            <input type="number" style="text-align: right; margin-bottom: 5px; width: 43px;">
-                            <button class="btn default" style="border-radius: 3px; size: 10px;">변경</button>
-                        </td>
-                        <td>-</td>
-                        <td>기본 배송</td>
-                        <td>2,500원<br/>고정</td>
-                        <td><span>0</span>원</td>
-                        <td>
-                            <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px; background-color: #e0e0eb">주문하기</button>
-                            <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">관심 상품 등록</button>
-                            <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">X 삭제</button>
-                        </td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr style="height: 60px;">
-                        <td colspan="5" style="border-right: none; text-align: left; padding-left: 10px;"><span>[기본배송]</span></td>
-                        <td colspan="5" style="border-left: none; text-align: right; padding-right: 10px;">
-                            상품 금액 <span>0</span> + <span>배송비 2,500 = 합계</span>&nbsp;
-                            <span style="font-weight: bold; font-size: 15pt;">0</span>
-                        </td>
-                    </tr>
-                </tfoot>
-            </table>
-            <div style="border: solid 1px #e0e0eb; padding: 15px 0;" >
-                <img src="" style="margin-left: 5px; position: relative; top: 4.5px;" th:src="@{/image-path}" />
-                <span style="font-size: 10pt; color:gray;">할인 적용 금액은 주문서 작성의 결제 예정 금액에서 확인 가능합니다.</span>
+            <div align="center">
+                <button class="btn default" id="allProduct">전체 상품 주문</button>
+                <button class="btn default backBtn" id="productClear">선택 상품 주문</button>
+                <button class="btn default footerbtn" id="footerbtn">쇼핑 계속하기</button>
+                <span class="clearboth"></span>
             </div>
+        </form>
         </div>
-        <div style="margin: 10px 0;">
-            <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
-            <button class="btn default btnfloat" style="background-color: gray; color: #fff">X 삭제하기</button>&nbsp;
-            <!-- <button class="btn default btnfloat">해외배송 장바구니로 이동</button> -->
-            <button class="btn default btnfloat2">장바구니 비우기</button>
-            <span class="clearboth"></span>
+    </div>
+    <div th:if="${session == null}">
+        <div style="text-align: center; margin-top: 50px;">
+                <p>로그인이 필요한 서비스입니다.</p>
+                <a th:href="@{/signin/signin}" class="btn btn-primary">로그인 하러 가기</a>
         </div>
-        <br/><br/>
-
-        <table class="calculation2">
-            <tr>
-                <th>총 상품금액</th>
-                <th>총 배송비</th>
-                <th style="width: 750px; padding: 22px 0;"><span>결제 예정 금액</span></th>
-            </tr>
-            <tr style="background-color: #fff;">
-                <td style="padding: 22px 0"><span class="price">0</span>원</td>
-                <td>+<span class="price">0</span>원</td>
-                <td>=<span class="price">0</span>원</td>
-            </tr>
-        </table>
-        <br/><br/>
-
-        <div align="center">
-            <button class="btn default" id="allProduct">전체 상품 주문</button>
-            <button class="btn default backBtn" id="productClear">선택 상품 주문</button>
-            <button class="btn default footerbtn" id="footerbtn">쇼핑 계속하기</button>
-            <span class="clearboth"></span>
-        </div>
-    </form>
     </div>
 </body>
 </html>
