--- a/src/main/resources/templates/challenge/challenge.html
+++ b/src/main/resources/templates/challenge/challenge.html
@@ -2,13 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Let's Go Challenge</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-          rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         div.choose {
@@ -37,16 +32,17 @@
             height: 50px;
         }
         .btn {
-            background-color: #6BBBD8;
+            background-color: #0E46A3;
             color: white;
         }
     </style>
 </head>
 <body>
-<header th:replace="common/Navibar :: navibar"></header>
+<div th:replace="~{common/Navibar :: body}"></div>
+<!--<div th:replace="common/Navibar :: navibar"></div>-->
 
 <!-- Header-->
-<header class="py-5" style="background-color: #BDCDD6">
+<header class="py-5" style="background-color: #0E46A3">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Let's Go Challenge</h1>
@@ -56,7 +52,7 @@
 </header>
 
 <!-- 좌측 메뉴바 -->
-<div class="market-menu" th:include="~{/market/MarketMenubar :: body}"></div>
+<!--<div class="market-menu" th:include="~{/market/MarketMenubar :: body}"></div>-->
 
 
 <div class="choose">
@@ -74,18 +70,18 @@
 
 <div class="list">
     <table>
-        <tr th:each="record, iterStat : ${records}">
-            <th class="list" th:text="${iterStat.index + 1} + 'th'"></th>
-            <td class="list" th:text="${record.name}"></td>
-            <td class="list" th:text="${record.distance}"></td>
-            <td class="list" th:text="${record.time}"></td>
+        <tr th:each="record, recordStat : ${records}">
+            <th class="list" th:text="${recordStat.index + 1} + 'th'"></th>
+            <td class="list" th:text="${record.id}"></td>
+            <td class="list" th:text="${record.swimDist} + 'KM'"></td>
+            <td class="list" th:text="${record.swimTime} + '분'"></td>
             <td class="list" th:text="${record.gender}"></td>
         </tr>
     </table>
 </div>
 
 <!-- Footer-->
-<footer class="py-5" style="background-color: #BDCDD6">
+<footer class="py-5" style="background-color: #0E46A3">
     <div class="container"><p class="m-0 text-center text-white">Software System &copy; 240105 marin-girls</p></div>
 </footer>
 </body>
