--- a/src/main/resources/templates/record/updateRecord.html
+++ b/src/main/resources/templates/record/updateRecord.html
@@ -32,7 +32,7 @@
             text-align: center;
         }
         .btn {
-            background-color: #6BBBD8;
+            background-color: #0E46A3;
             color: white;
         }
     </style>
@@ -44,10 +44,10 @@
     </script>
 </head>
 <body>
-<div th:insert="common/Navibar :: navibar"></div>
+<div th:replace="~{common/Navibar :: body}"></div>
 
 <!-- Header-->
-<header class="py-5" style="background-color: #BDCDD6">
+<header class="py-5" style="background-color: #0E46A3">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Let's Go Record</h1>
@@ -93,7 +93,7 @@
 </div>
 
 <!-- Footer-->
-<footer class="py-5" style="background-color: #BDCDD6">
+<footer class="py-5" style="background-color: #0E46A3">
     <div class="container"><p class="m-0 text-center text-white">Software System &copy; 240105 marin-girls</p></div>
 </footer>
 </body>
