--- a/src/main/resources/templates/challenge/challenge.html
+++ b/src/main/resources/templates/challenge/challenge.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Let's Go Challenge</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -39,7 +40,6 @@
 </head>
 <body>
 <div th:replace="~{common/Navibar :: body}"></div>
-<!--<div th:replace="common/Navibar :: navibar"></div>-->
 
 <!-- Header-->
 <header class="py-5" style="background-color: #0E46A3">
@@ -51,18 +51,14 @@
     </div>
 </header>
 
-<!-- 좌측 메뉴바 -->
-<!--<div class="market-menu" th:include="~{/market/MarketMenubar :: body}"></div>-->
-
-
 <div class="choose">
     <table>
         <tr>
             <th class="choose">리그 선택</th>
             <td class="choose">
-                <input type="button" value="전체" class="btn">
-                <input type="button" value="여자" class="btn">
-                <input type="button" value="남자" class="btn">
+                <input type="button" value="전체" class="btn" onclick="location.href='/challenge/all'">
+                <input type="button" value="여자" class="btn" onclick="location.href='/challenge/woman'">
+                <input type="button" value="남자" class="btn" onclick="location.href='/challenge/man'">
             </td>
         </tr>
     </table>
