--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -6,6 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/cart.css">
+    <script th:if="${loginRequired}">
+        $(document).ready(function() {
+            alert("로그인이 필요합니다.");
+            window.location.href = '/market/list';
+        });
+    </script>
 </head>
 <body>
     <div th:replace="~{common/Navibar :: body}"></div>
@@ -79,8 +85,8 @@
                             </td>
                             <td><span th:text="${cartItem.product.productSellPrice}">0</span>원</td>
                             <td style="width: 80px;">
-                                <input type="number" th:value="${cartItem.amount}" style="text-align: right; margin-bottom: 5px; width: 43px;">
-                                <button class="btn default" style="border-radius: 3px; size: 10px;">변경</button>
+                                <input type="number" id="amount-${cartItem.cartId}" th:value="${cartItem.amount}" style="text-align: right; margin-bottom: 5px; width: 43px;">
+                                <button class="btn default" style="border-radius: 3px; size: 10px;" onclick="updateCartItem(${cartItem.cartId})">변경</button>
                             </td>
                             <td>-</td>
                             <td>기본 배송</td>
@@ -114,7 +120,10 @@
             </div>
             <div style="margin: 10px 0;">
                 <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
-                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="deleteCartItem(${cartItem.product.id})">X 삭제하기</button>
+                <form th:action="@{/cart/remove/{cartId}(cartId=${cartItem.cartId})}" method="post">
+                    <input type="hidden" name="_method" value="delete"/>
+                    <button type="submit" class="btn default btnfloat" style="background-color: gray; color: #fff">삭제</button>
+                </form>
                 <button class="btn default btnfloat2">장바구니 비우기</button>
                 <span class="clearboth"></span>
             </div>
@@ -144,20 +153,33 @@
         </div>
 </body>
 <script>
-   function deleteCartItem(cartId) {
-            if (confirm("정말로 삭제하시겠습니까?")) {
-                $.ajax({
-                    url: '/cart/remove/' + cartId,
-                    type: 'DELETE',
-                    success: function(result) {
-                        window.location.reload();
-                    },
-                    error: function(error) {
-                        alert("삭제 실패");
-                    }
-                });
+    function updateCartItem(cartId) {
+        var newAmount = document.getElementById('amount-' + cartId).value;
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/cart/update", true);
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                location.reload(); // 성공적으로 처리된 경우 페이지 새로고침
             }
+        };
+        xhr.send("cartId=" + encodeURIComponent(cartId) + "&amount=" + encodeURIComponent(newAmount));
+    }
+
+    function deleteCartItem(cartId) {
+        if (confirm("정말로 삭제하시겠습니까?")) {
+            $.ajax({
+                url: '/cart/remove/' + cartId,
+                type: 'DELETE',
+                success: function(result) {
+                    window.location.reload();
+                },
+                error: function(error) {
+                    alert("삭제 실패");
+                }
+            });
         }
+    }
 
 </script>
 </html>
